--- a/src/assets/styles/components/_button.scss
+++ b/src/assets/styles/components/_button.scss
@@ -22,7 +22,7 @@
   @supports (background-clip: border-area) {
     color: transparent;
     border-color: transparent;
-    background-image: var(--gradient-primary), var(--gradient-primary);
+    background-image: var(--gradient-primary), var(--gradient-primary-text);
     background-clip: border-area, text;
     background-origin: border-box;
   }
